@@ -1,0 +1,10 @@
+WendzelNNTPd is an IPv6-ready Usenet server (NNTP daemon) with the
+main goal to maximize usability on the console level. WendzelNNTPd
+achieves this by breaking down complicated things into an easy-to-use
+configuration file and tool. The server is portable (Linux/*BSD/
+*nix), supports AUTHINFO authentication, contains support for Access
+Control Lists (ACL), Role-based Access Control (RBAC) and supports
+invisible newsgroups. It currently supports MySQL and SQLite backends.
+
+Note: This package is compiled without MYSQL support and uses
+      sqlite3 instead.
